# custom-public

./: README.md
.github/workflows/: main.yml
scripts/: hist.ipynb  nolitter_table.py  separated_graph.py  stat_graphs.py
src/: CMakeLists.txt  DoNotOptimize.hpp  GNUmakefile  Makefile  PFMWrapper.hpp  README.md  REAMDE.md  detector.cpp  litterer-standalone.cpp  litterer.cpp  malloc-counter.cpp  microbenchmark-pages-new.cpp  microbenchmark-pages.cpp  printf.h  size-classes.cpp  trace-converter.py
src/include/: DoNotOptimize.hpp
src/include/litterer/: constants.h  litterer.h
src/test/: detector.size_classes.c  detector.size_classes.cpp
